# libBIO

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: close-pr.yml  deploy.yml
docs/: Doxyfile.in  header.html
docs/pages/: Deserialization.md  Reading.md  Serialization.md  UndefinedBehavior.md  Writing.md
docs/pages/types/buffer/: BinaryBuffer.md  Buffer.md  SizedBinaryBuffer.md
include/: BinaryIO.h  Exports.h  Library.h
include/BinaryIO/: BinaryBuffer.h  BinaryIO.h  Exports.h  Library.h  Platform.h
include/BinaryIO/buffer/: BinaryBuffer.h  BinaryBuffer.tpp  SizedBinaryBuffer.h  SizedBinaryBuffer.tpp
include/BinaryIO/container/: FixedArray.h
include/BinaryIO/io/: IBuffer.h  IPeekable.h  IReadable.h  ISeekable.h  ISimplePeekable.h  IWritable.h
include/BinaryIO/io/interface/: IReadable.h
include/BinaryIO/io/iter/: Iterator.h
include/BinaryIO/stream/: BinaryInputStream.h  BinaryInputStream.tpp  BinaryOutputStream.h  BinaryOutputStream.tpp
include/BinaryIO/util/: ByteOrder.h  ByteOrderUtil.h  ISeekable.h
include/BinaryIO/util/string/: StringConverter.h
src/: BinaryBuffer.cpp  BinaryIO.cpp  BinaryString.cpp  Library.cpp
src/buffer/: BinaryBuffer.cpp  SizedBinaryBuffer.cpp
src/io/: IReadable.cpp  IWritable.cpp
src/stream/: BinaryInputStream.cpp  BinaryOutputStream.cpp
src/util/string/: StringConverter.cpp
tests/: CMakeLists.txt
tests/cpp14-compile-test/: CMakeLists.txt
tests/cpp14-compile-test/src/: Tests.cpp
tests/include/BinaryIO/Tests/: Tests.h
tests/include/BinaryIO/Tests/util/: Output.h  Random.h
tests/src/: Tests.cpp
